--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "^5.0.1"
   },
