--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-spring/parallax": "^9.7.5",
-    "gsap": "^3.12.5",
+    "framer-motion": "^11.14.4",
+    "motion": "^11.14.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
